--- a/3.FruitsGame/index.html
+++ b/3.FruitsGame/index.html
@@ -10,6 +10,7 @@
     />
     <link rel="stylesheet" href="styling.css" />
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+    <link rel="icon" href="images/logo.png">
   </head>
 
   <body>
