--- a/2. Maths Game/index.html
+++ b/2. Maths Game/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="logo_Math.png" />
   </head>
 
   <body>
